fixed test and updated readme